# ata-core

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
ata_pipeline0/: backfill.py  fetch_events.py  main.py  preprocess_events.py  write_events.py
ata_pipeline0/helpers/: datetime.py  events.py  fields.py  preprocessors.py  site.py
ata_pipeline0/site/: newsletter.py  sites.py
src/: backfill.py  fetch_events.py  main.py  preprocess_events.py  transform_events.py  write_events.py
src/helpers/: datetime.py  exceptions.py  fields.py  io.py  logging.py  preprocessors.py
tests/: conftest.py  test_fetch_events.py  test_main.py  test_preprocess_events.py  test_write_events.py
tests/helpers/: test_datetime.py  test_preprocessors.py
tests/site/: test_newsletter.py
tests/site/newsletter/: conftest.py  test_afro_la.py  test_dallas_free_press.py  test_open_vallejo.py  test_site.py  test_the_19th.py
tests/test_helpers/: test_datetime.py
