[tool.poetry]
name = "ata-pipeline0"
version = "0.1.0"
description = "Snowplow to Redshift data processing."
authors = ["LocalNewsLab <mh3287@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
mypy = "0.981"
pre-commit = "2.19.0"
pytest = "7.1.3"
pandas-stubs = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 122
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | cdk
)/
'''

[tool.isort]
profile = "black"
