[tool.poetry]
name = "ata-pipeline0"
version = "0.1.0"
description = "Snowplow to Redshift data processing."
authors = ["LocalNewsLab <mh3287@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
boto3 = "^1.26.0"
boto3-stubs = {extras = ["s3"], version = "^1.25.5"}
pandas = "^1.5.1"
ata-db-models = "^0.0.7"
SQLAlchemy = "1.4.41"


[tool.poetry.dev-dependencies]
mypy = "0.981"
click = "8.1.3"
pandas-stubs = "^1.5.1"
pre-commit = "2.19.0"
pytest = "7.1.3"
sqlalchemy-stubs = "^0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 122
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | cdk
)/
'''

[tool.mypy]
files = "."
exclude = [
    '\.venv',
]


[[tool.mypy.overrides]]
module = ["ata_db_models.models", "ata_db_models.helpers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["unit", "integration"]
testpaths = ["tests"]

[tool.isort]
profile = "black"
